<resources>
    <string name="app_name">Moonrise</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="delete_button_description">Удалить</string>
    <string name="add_button">Добавить</string>
    <string name="category_format">Категория: %1$s</string>
    <string name="genres_format">Жанры: %1$s</string>
    <string name="no_genres">Жанры: отсутствуют</string>
    <string name="release_date">Дата выпуска: %s</string>
    <string name="show_more">Подробнее...</string>
    <string name="hide">Скрыть</string>
    <string name="edit_button">Изменить</string>
    <string name="not_important">Неважно</string>
    <string name="year_range">%1$s - %2$s</string>
    <string name="year_from">С %1$s</string>
    <string name="year_to">До %1$s</string>
    <string name="release_date_format">%1$d г.</string>
    <string name="save">Сохранить</string>
    <string name="change_rating">Изменить оценку</string>
    <string name="delete_rating">Удалить оценку</string>
    <string name="franchise_releases">Релизов во франшизе: %1$d</string>
    <string name="kinopoisk">Кинопоиск</string>
    <string name="test_title">Время приключений: Фиона и Кейк</string>
    <string name="test_orTitle">Adventure Time: Fionna and Cake</string>
    <string name="test_rating">16+</string>
    <string name="test_date">Дата выпуска: 2023 г.</string>
    <string name="test_category">Категория: мультфильм</string>
    <string name="test_genre">Жанр: мультфильм, фантастика, фэнтези, приключения</string>
    <string name="head_desc">О Чём</string>
    <string name="test_Desc">Описание</string>
    <string name="head_watch">Смотреть</string>
    <string name="head_related">Связанное</string>
    <string name="test_contentDesc">buttonRate</string>
    <string name="list">list</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="name">Название</string>
    <string name="copy_name">Скопировать название</string>
    <string name="or_name">Оригинальное название</string>
    <string name="copy_or_name">Скопировать оригинальное название</string>
    <string name="close">Закрыть</string>
    <string name="head_filter_genre">Фильтр по жанрам</string>
    <string name="close2">Сбросить</string>
    <string name="save2">Выбрать</string>
    <string name="head_filter_years">Фильтр по годам</string>
    <string name="close3">Неважно</string>
    <string name="save3">Продолжить</string>
    <string name="head_your_rating">Твоя оценка</string>
    <string name="head_choose_status">Выберите статус просмотра</string>
    <string name="not_watching">Не смотрю</string>
    <string name="watching">Смотрю</string>
    <string name="planned">В планах</string>
    <string name="watched">Просмотрено</string>
    <string name="favorite">Любимое</string>
    <string name="paused">Отложено</string>
    <string name="dropped">Брошено</string>
    <string name="close4">Отмена</string>
    <string name="head_filters">Фильтры</string>
    <string name="category">Категория</string>
    <string name="no_matter">Неважно</string>
    <string name="genre">Жанр</string>
    <string name="date_release">Год выпуска</string>
    <string name="age_rating">Возрастные ограничения</string>
    <string name="status">Статус просмотра</string>
    <string name="save4">Применить</string>
    <string name="desc_back">back</string>
    <string name="change">Изменить</string>
    <string name="desc_list">List Content</string>
    <string name="franchise">Франшиза</string>
    <string name="desc_hide">Hide</string>
    <string name="desc_filters">Filters</string>
    <string name="empty_message">Здесь пока ничего нет (・・ ) ?</string>
    <string name="search_results">Результаты поиска</string>
    <string name="test_number_of_releases">6 релизов во франшизе</string>
    <string name="follow">Перейти</string>
    <string name="desc_voice">voice</string>
    <string name="test_number">0</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="sort">Сортировка</string>
</resources>