<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:paddingHorizontal="22dp"
    android:paddingVertical="25dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="16dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/back_button"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_arrow_back"
                    android:contentDescription="@string/desc_back"
                    android:tint="?attr/colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head_filters"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="24sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"/>

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:text="@string/no_matter"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_tint="?attr/colorOnBackground" />

            <!-- Жанр -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"/>

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinner_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:text="@string/no_matter"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_tint="?attr/colorOnBackground" />

            <!-- Год выпуска -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_release"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"/>

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinner_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:text="@string/no_matter"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_tint="?attr/colorOnBackground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_rating"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"/>

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinner_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:text="@string/no_matter"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_tint="?attr/colorOnBackground" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"/>

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:text="@string/no_matter"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_tint="?attr/colorOnBackground" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/close2"
            android:background="@drawable/rounded_button_cansel_border"
            android:textColor="?attr/colorSecondary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apply_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save4"
            android:background="@drawable/rounded_button_background"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>