<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/franchiseListContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    tools:context=".ui.franchise.FranchiseFragment">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="22dp"
        android:layout_marginVertical="25dp"
        android:gravity="center_vertical"
        android:background="?android:attr/colorBackground">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:contentDescription="@string/desc_back"
            android:src="@drawable/ic_arrow_back"
            android:tint="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/franchiseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/franchise"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/franchiseContentBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/franchise_description_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/test_Desc"
                android:textColor="?attr/colorOnBackground"
                android:textSize="22sp"
                android:textFontWeight="600"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/franchise_close_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                android:contentDescription="@string/desc_hide"
                android:src="@drawable/ic_eye_open"
                android:tint="?attr/colorOnBackground" />
        </LinearLayout>

        <TextView
            android:id="@+id/franchise_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            tools:text="Список всех частей франшизы: 3 сезона, 2 фильма." />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/franchiseItemsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/desc_list"
        android:scrollbarThumbVertical="@color/main_purple"
        tools:listitem="@layout/item_in_list" />
</LinearLayout>