<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/colorBackgroundFloating"
    android:paddingHorizontal="22dp"
    android:paddingVertical="25dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head_filter_years"
        android:textSize="18sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <NumberPicker
            android:id="@+id/numberPickerStart"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/numberPickerEnd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close3"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:cornerRadius="18dp"
        android:textColor="?attr/colorSecondary"
        android:minHeight="48dp"
        android:paddingVertical="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save3"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.Button"
        app:cornerRadius="18dp"
        android:textColor="?attr/colorOnPrimary"
        android:minHeight="48dp"
        android:paddingVertical="12dp"/>
</LinearLayout>