<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="22dp"
    android:paddingVertical="25dp"
    android:background="?attr/colorBackgroundFloating">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/head_filter_genre"
        android:textSize="20sp"
        android:textColor="?attr/colorOnBackground"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/checkbox_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/close2"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:cornerRadius="18dp"
            android:textColor="?attr/colorSecondary"
            android:minHeight="48dp"
            android:paddingVertical="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save2"
            android:layout_marginStart="16dp"
            style="@style/Widget.Material3.Button"
            app:cornerRadius="18dp"
            android:textColor="?attr/colorOnPrimary"
            android:minHeight="48dp"
            android:paddingVertical="12dp"/>
    </LinearLayout>
</LinearLayout>