<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.moonrise.ui.list.ListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_filter"
            app:destination="@id/navigation_filter" />
        <action
            android:id="@+id/action_navigation_list_to_navigation_item"
            app:destination="@id/navigation_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_filter"
        android:name="com.example.moonrise.ui.filter.FilterFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_filter" >
        <action
            android:id="@+id/action_navigation_filter_to_filteredListFragment"
            app:destination="@id/navigation_filteredList" />
    </fragment>

    <fragment
        android:id="@+id/navigation_item"
        android:name="com.example.moonrise.ui.item.ItemFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.moonrise.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_item"
            app:destination="@id/navigation_item" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.moonrise.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_filter"
            app:destination="@id/navigation_filter" />
        <action
            android:id="@+id/action_navigation_search_to_franchiseFragment"
            app:destination="@id/navigation_franchise" />
    </fragment>
    <fragment
        android:id="@+id/navigation_filteredList"
        android:name="com.example.moonrise.ui.filtered_list.FilteredListFragment"
        android:label="fragment_filtered_list"
        tools:layout="@layout/fragment_filtered_list" />
    <fragment
        android:id="@+id/navigation_franchise"
        android:name="com.example.moonrise.ui.franchise.FranchiseFragment"
        android:label="fragment_franchise"
        tools:layout="@layout/fragment_franchise" />
</navigation>